--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
       # Step 1: Check out the code from the GitHub repository
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Updated to v3
 
       # Step 2: Set up Node.js
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  # Updated to v3
         with:
-          node-version: '18'
+          node-version: '18'  # You can change this to '20' if needed
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -34,7 +34,7 @@ jobs:
     steps:
       # Step 1: Checkout the code
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Updated to v3
 
       # Step 2: Install Netlify CLI to deploy
       - name: Install Netlify CLI
@@ -45,4 +45,4 @@ jobs:
         run: netlify deploy --prod --dir=build
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }} # Make sure to set this correctly
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
