--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,23 @@ jobs:
     steps:
       # Step 1: Check out the code from the GitHub repository
       - name: Checkout Code
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
 
       # Step 2: Set up Node.js
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # Updated to v3
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'  # You can change this to '20' if needed
+          node-version: '18'
 
       # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
+        working-directory: ci-cd-app  # Change to the ci-cd-app directory
 
       # Step 4: Build the React app
       - name: Build
         run: npm run build
+        working-directory: ci-cd-app  # Change to the ci-cd-app directory
 
   deploy:
     runs-on: ubuntu-latest
@@ -34,7 +36,7 @@ jobs:
     steps:
       # Step 1: Checkout the code
       - name: Checkout Code
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
 
       # Step 2: Install Netlify CLI to deploy
       - name: Install Netlify CLI
@@ -42,7 +44,6 @@ jobs:
 
       # Step 3: Deploy to Netlify
       - name: Deploy to Netlify
-        run: netlify deploy --prod --dir=build
+        run: netlify deploy --prod --dir=ci-cd-app/build --site=${{ secrets.NETLIFY_SITE_ID }}
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
